# cutekit

./: .gitignore  LICENSE  README.md  license.md  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: checks.yml  publish.yml  pypi.yaml  requirements.txt
cutekit/: __init__.py  args.py  bootstrap.sh  builder.py  cli.py  cmds.py  compat.py  const.py  context.py  entrypoint.sh  export.py  get.py  graph.py  jexpr.py  mixins.py  model.py  ninja.py  plugins.py  pods.py  project.py  requirements.txt  rules.py  shell.py  utils.py  vt100.py
doc/: cutekit.md  extends.md  templates.md
doc/spec/: jexpr.md  manifest.md  project.md  target.md
docs/: cutekit-build.1  cutekit-debug.1  cutekit-graph.1  cutekit-help.1  cutekit-run.1  cutekit.1  osdk-graph.1  osdk-help.1  osdk-run.1  osdk.1
meta/nix/: flake.nix
osdk/: __init__.py  args.py  build.py  builder.py  cmds.py  const.py  context.py  environments.py  graph.py  jexpr.py  logger.py  manifests.py  mixins.py  model.py  ninja.py  plugins.py  rules.py  shell.py  targets.py  utils.py  vt100.py
osdk-old/: __init__.py  build.py  manifests.py  targets.py
schemas/: osdk.manifest.component.v1.json  osdk.manifest.project.v1.json  osdk.manifest.target.v1.json
tests/: test_cli.py  test_jexpr.py  test_resolver.py
