[build-system]
requires = ["setuptools ~= 68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cutekit"
description = "A build system and package manager for low-level software development"
authors = [
    { name = "Keyboard Slayer", email = "joda@cute.engineering" },
    { name = "Sleepy Monax", email = "nivb@cute.engineering" },
    { name = "Cyp", email = "cypb@cute.engineering" },
    { name = "Cute Engineering", email = "contact@cute.engineering" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests ~= 2.31.0",
    "graphviz ~= 0.20.1",
    "dataclasses-json ~= 0.6.2",
]
dynamic = ["version"]

[project.scripts]
ck = "cutekit:main"
cutekit = "cutekit:main"
cute-engineering-cutekit = "cutekit:main"

[tool.setuptools]
packages = ["cutekit"]

[tool.setuptools.dynamic]
version = { attr = "cutekit.const.VERSION" }

[tool.setuptools.package-data]
"cutekit" = ["py.typed"]
