[build-system]
requires = ["setuptools ~= 68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cutekit"
description = "A build system and package manager for low-level software development"
authors = [
    { name = "Keyboard Slayer", email = "joda@cute.engineering" },
    { name = "Sleepy Monax", email = "nivb@cute.engineering" },
    { name = "Cyp", email = "cypb@cute.engineering" },
    { name = "Cute Engineering", email = "contact@cute.engineering" },
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dynamic = ["version", "dependencies"]

[project.scripts]
ck = "cutekit:main"
cutekit = "cutekit:main"
cute-engineering-cutekit = "cutekit:main"

[tool.setuptools]
packages = ["cutekit"]

[tool.setuptools.dynamic]
version = { attr = "cutekit.const.VERSION" }
dependencies = { file = ["cutekit/requirements.txt"] }

[tool.setuptools.package-data]
"cutekit" = ["py.typed", "requirements.txt", "entrypoint.sh", "bootstrap.sh"]
